@@ -1,5 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
+  Bugfixes:
+    - Fix '(foo())' being a valid statement
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2022-02-17
